crates/shell-parser/tests/snapshots/parser_snapshots__complex__case_with_command_sub_word.snap
---
source: crates/shell-parser/tests/parser_snapshots.rs
expression: "parse(\"case $(uname) in Linux) echo linux;; Darwin) echo mac;; esac\")"
---
Case {
    word: Word {
        parts: [
            CommandSubstitution {
                source: "uname",
                span: Span {
                    start: 7,
                    end: 12,
                },
            },
        ],
    },
    arms: [
        CaseArm {
            patterns: [
                Word {
                    parts: [
                        Literal(
                            "Linux",
                        ),
                    ],
                },
            ],
            body: Some(
                Simple(
                    SimpleCommand {
                        assignments: [],
                        words: [
                            Word {
                                parts: [
                                    Literal(
                                        "echo",
                                    ),
                                ],
                            },
                            Word {
                                parts: [
                                    Literal(
                                        "linux",
                                    ),
                                ],
                            },
                        ],
                        redirections: [],
                    },
                ),
            ),
            terminator: Break,
        },
        CaseArm {
            patterns: [
                Word {
                    parts: [
                        Literal(
                            "Darwin",
                        ),
                    ],
                },
            ],
            body: Some(
                Simple(
                    SimpleCommand {
                        assignments: [],
                        words: [
                            Word {
                                parts: [
                                    Literal(
                                        "echo",
                                    ),
                                ],
                            },
                            Word {
                                parts: [
                                    Literal(
                                        "mac",
                                    ),
                                ],
                            },
                        ],
                        redirections: [],
                    },
                ),
            ),
            terminator: Break,
        },
    ],
}
