crates/shell-parser/tests/snapshots/parser_snapshots__complex__deeply_nested_subshells.snap
---
source: tests/parser_snapshots.rs
expression: "parse(\"(( (echo deep) ))\")"
---
Subshell(
    Subshell(
        Subshell(
            Simple(
                SimpleCommand {
                    assignments: [],
                    words: [
                        Word {
                            parts: [
                                Literal(
                                    "echo",
                                ),
                            ],
                        },
                        Word {
                            parts: [
                                Literal(
                                    "deep",
                                ),
                            ],
                        },
                    ],
                    redirections: [],
                },
            ),
        ),
    ),
)
