crates/shell-parser/tests/snapshots/parser_snapshots__complex__double_quotes_multiple_expansions.snap
---
source: tests/parser_snapshots.rs
expression: "parse(r#\"echo \"user=$USER home=$HOME shell=$SHELL\"\"#)"
---
Simple(
    SimpleCommand {
        assignments: [],
        words: [
            Word {
                parts: [
                    Literal(
                        "echo",
                    ),
                ],
            },
            Word {
                parts: [
                    DoubleQuoted(
                        [
                            Literal(
                                "user=",
                            ),
                            Parameter(
                                "USER",
                            ),
                            Literal(
                                " home=",
                            ),
                            Parameter(
                                "HOME",
                            ),
                            Literal(
                                " shell=",
                            ),
                            Parameter(
                                "SHELL",
                            ),
                        ],
                    ),
                ],
            },
        ],
        redirections: [],
    },
)
