crates/shell-parser/tests/snapshots/parser_snapshots__complex__for_with_command_sub_in_words.snap
---
source: tests/parser_snapshots.rs
expression: "parse(\"for f in $(ls *.txt); do cat $f; done\")"
---
For {
    var: "f",
    words: [
        Word {
            parts: [
                CommandSubstitution {
                    source: "ls *.txt",
                    span: Span {
                        start: 11,
                        end: 19,
                    },
                },
            ],
        },
    ],
    body: Simple(
        SimpleCommand {
            assignments: [],
            words: [
                Word {
                    parts: [
                        Literal(
                            "cat",
                        ),
                    ],
                },
                Word {
                    parts: [
                        Parameter(
                            "f",
                        ),
                    ],
                },
            ],
            redirections: [],
        },
    ),
}
