crates/shell-parser/tests/snapshots/parser_snapshots__complex__function_with_local_and_redirect.snap
---
source: crates/shell-parser/tests/parser_snapshots.rs
expression: "parse(\"f() { local x=1; echo $x > /dev/null; }\")"
---
FunctionDef {
    name: "f",
    body: BraceGroup(
        Sequence(
            [
                Simple(
                    SimpleCommand {
                        assignments: [
                            Assignment {
                                name: "x",
                                value: Scalar(
                                    Word {
                                        parts: [
                                            Literal(
                                                "1",
                                            ),
                                        ],
                                    },
                                ),
                                scope: Declaration {
                                    exported: false,
                                },
                            },
                        ],
                        words: [
                            Word {
                                parts: [
                                    Literal(
                                        "local",
                                    ),
                                ],
                            },
                        ],
                        redirections: [],
                    },
                ),
                Simple(
                    SimpleCommand {
                        assignments: [],
                        words: [
                            Word {
                                parts: [
                                    Literal(
                                        "echo",
                                    ),
                                ],
                            },
                            Word {
                                parts: [
                                    Parameter(
                                        "x",
                                    ),
                                ],
                            },
                        ],
                        redirections: [
                            Redirection {
                                fd: None,
                                kind: Output,
                                target: File(
                                    Word {
                                        parts: [
                                            Literal(
                                                "/dev/null",
                                            ),
                                        ],
                                    },
                                ),
                            },
                        ],
                    },
                ),
            ],
        ),
    ),
}
