crates/shell-parser/tests/snapshots/parser_snapshots__complex__multiple_assignments_before_command.snap
---
source: crates/shell-parser/tests/parser_snapshots.rs
expression: "parse(\"A=1 B=2 C=3 cmd arg\")"
---
Simple(
    SimpleCommand {
        assignments: [
            Assignment {
                name: "A",
                value: Scalar(
                    Word {
                        parts: [
                            Literal(
                                "1",
                            ),
                        ],
                    },
                ),
                scope: Prefix,
            },
            Assignment {
                name: "B",
                value: Scalar(
                    Word {
                        parts: [
                            Literal(
                                "2",
                            ),
                        ],
                    },
                ),
                scope: Prefix,
            },
            Assignment {
                name: "C",
                value: Scalar(
                    Word {
                        parts: [
                            Literal(
                                "3",
                            ),
                        ],
                    },
                ),
                scope: Prefix,
            },
        ],
        words: [
            Word {
                parts: [
                    Literal(
                        "cmd",
                    ),
                ],
            },
            Word {
                parts: [
                    Literal(
                        "arg",
                    ),
                ],
            },
        ],
        redirections: [],
    },
)
