crates/shell-parser/tests/snapshots/parser_snapshots__complex__nested_if_in_while.snap
---
source: tests/parser_snapshots.rs
assertion_line: 466
expression: "parse(\"while true; do if test -f marker; then break; fi; done\")"
---
Loop {
    kind: While,
    condition: Simple(
        SimpleCommand {
            assignments: [],
            words: [
                Word {
                    parts: [
                        Literal(
                            "true",
                        ),
                    ],
                },
            ],
            redirections: [],
        },
    ),
    body: If {
        condition: Simple(
            SimpleCommand {
                assignments: [],
                words: [
                    Word {
                        parts: [
                            Literal(
                                "test",
                            ),
                        ],
                    },
                    Word {
                        parts: [
                            Literal(
                                "-f",
                            ),
                        ],
                    },
                    Word {
                        parts: [
                            Literal(
                                "marker",
                            ),
                        ],
                    },
                ],
                redirections: [],
            },
        ),
        then_branch: Simple(
            SimpleCommand {
                assignments: [],
                words: [
                    Word {
                        parts: [
                            Literal(
                                "break",
                            ),
                        ],
                    },
                ],
                redirections: [],
            },
        ),
        elif_branches: [],
        else_branch: None,
    },
}
