crates/shell-parser/tests/snapshots/parser_snapshots__complex__pipeline_in_subshell_with_and.snap
---
source: tests/parser_snapshots.rs
expression: "parse(\"(ls | grep foo) && echo done\")"
---
And(
    Subshell(
        Pipeline(
            [
                Simple(
                    SimpleCommand {
                        assignments: [],
                        words: [
                            Word {
                                parts: [
                                    Literal(
                                        "ls",
                                    ),
                                ],
                            },
                        ],
                        redirections: [],
                    },
                ),
                Simple(
                    SimpleCommand {
                        assignments: [],
                        words: [
                            Word {
                                parts: [
                                    Literal(
                                        "grep",
                                    ),
                                ],
                            },
                            Word {
                                parts: [
                                    Literal(
                                        "foo",
                                    ),
                                ],
                            },
                        ],
                        redirections: [],
                    },
                ),
            ],
        ),
    ),
    Simple(
        SimpleCommand {
            assignments: [],
            words: [
                Word {
                    parts: [
                        Literal(
                            "echo",
                        ),
                    ],
                },
                Word {
                    parts: [
                        Literal(
                            "done",
                        ),
                    ],
                },
            ],
            redirections: [],
        },
    ),
)
