crates/shell-parser/tests/snapshots/parser_snapshots__complex__pipeline_of_compound_commands.snap
---
source: tests/parser_snapshots.rs
expression: "parse(\"{ echo a; echo b; } | sort | uniq\")"
---
Pipeline(
    [
        BraceGroup(
            Sequence(
                [
                    Simple(
                        SimpleCommand {
                            assignments: [],
                            words: [
                                Word {
                                    parts: [
                                        Literal(
                                            "echo",
                                        ),
                                    ],
                                },
                                Word {
                                    parts: [
                                        Literal(
                                            "a",
                                        ),
                                    ],
                                },
                            ],
                            redirections: [],
                        },
                    ),
                    Simple(
                        SimpleCommand {
                            assignments: [],
                            words: [
                                Word {
                                    parts: [
                                        Literal(
                                            "echo",
                                        ),
                                    ],
                                },
                                Word {
                                    parts: [
                                        Literal(
                                            "b",
                                        ),
                                    ],
                                },
                            ],
                            redirections: [],
                        },
                    ),
                ],
            ),
        ),
        Simple(
            SimpleCommand {
                assignments: [],
                words: [
                    Word {
                        parts: [
                            Literal(
                                "sort",
                            ),
                        ],
                    },
                ],
                redirections: [],
            },
        ),
        Simple(
            SimpleCommand {
                assignments: [],
                words: [
                    Word {
                        parts: [
                            Literal(
                                "uniq",
                            ),
                        ],
                    },
                ],
                redirections: [],
            },
        ),
    ],
)
