crates/shell-parser/tests/snapshots/parser_snapshots__complex__redirect_with_fd_and_pipe.snap
---
source: tests/parser_snapshots.rs
expression: "parse(\"cmd 2>&1 | grep error\")"
---
Pipeline(
    [
        Simple(
            SimpleCommand {
                assignments: [],
                words: [
                    Word {
                        parts: [
                            Literal(
                                "cmd",
                            ),
                        ],
                    },
                ],
                redirections: [
                    Redirection {
                        fd: Some(
                            2,
                        ),
                        kind: DupOutput,
                        target: Fd(
                            1,
                        ),
                    },
                ],
            },
        ),
        Simple(
            SimpleCommand {
                assignments: [],
                words: [
                    Word {
                        parts: [
                            Literal(
                                "grep",
                            ),
                        ],
                    },
                    Word {
                        parts: [
                            Literal(
                                "error",
                            ),
                        ],
                    },
                ],
                redirections: [],
            },
        ),
    ],
)
